--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,18 +1,20 @@
 .App {
   text-align: center;
+  /* width: 100%; */
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 1s linear;
+  height: 100%;
   pointer-events: none;
+  width: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffc400;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;a */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
